# gnome-videos

./: Makefile.am  README.md  configure.ac  gnome-videos.spec.in
data/: Makefile.am  generate-icons.py  generate-triangle-points.py  rasterize-icons.py  so.bob131.Videos.desktop.in  so.bob131.Videos.gschema.xml
src/: Makefile.am  bus.vala  controller.vala  event.vala  gnome-videos.vala  gresources.xml  gst-redefs.vapi  media.vala  pipeline.vala  preferences.vala
src/bcmdec-workaround/: bcmdec-workaround.vala  crystalhd.vapi
src/data/: key-bindings.css
src/devices/: bluray.vala  device.vala  libbluray.vapi  uri.vala
src/gst/: event.vala  gst-redefs.vapi  nanoseconds.vala  pipeline.vala  sub-overlay-converter.vala  tags.vala
src/gtk/: about.ui.in  about.vala  app-menu.ui  player-stage.vala  prefs-content.ui  prefs.vala  shortcut-window.ui  shortcut-window.vala  stage-embed.vala  stream-manager.vala  submenu.ui  submenu.vala  window.ui  window.vala
src/gtk/controls/: control-container.ui  control-container.vala  fullscreen-button.ui  fullscreen-button.vala  play-button.ui  play-button.vala  seek-bar.ui  seek-bar.vala
src/vaapi-workaround/: brand-string.c  cpuid.vapi  va-display-context.h  vaapi-workaround.vala  vaapi.vapi  vaapidecodebin.vala  wayland.vapi
